test_framework_output4.txt
=== SYNTAX CHECKS ===
conftest.py: OK
test_main_menu.py: OK
test_members.py: OK
  File "tests/test_sales.py", line 33
    setattr(sys.modules['bot'], 'step_hdr', MagicMock(return_value='📋 Step 1/6
                                                                   ^
SyntaxError: unterminated string literal (detected at line 33)
test_sales.py: FAIL
test_booking.py: OK
test_reports.py: OK
test_finance.py: OK
test_stock.py: OK
=== RUNNING PYTEST ===
============================= test session starts ==============================
collecting ... collected 32 items / 1 error

==================================== ERRORS ====================================
_____________________ ERROR collecting tests/test_sales.py _____________________
/usr/local/lib/python3.12/dist-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/usr/local/lib/python3.12/dist-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/usr/local/lib/python3.12/dist-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/lib/python3.12/dist-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/root/psvibe-sales-bot/tests/test_sales.py", line 33
E       setattr(sys.modules['bot'], 'step_hdr', MagicMock(return_value='📋 Step 1/6
E                                                                      ^
E   SyntaxError: unterminated string literal (detected at line 33)
=========================== short test summary info ============================
ERROR tests/test_sales.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 0.18s ===============================
EXIT_CODE=2
